# fastforge

./: .gitignore  Cargo.toml  README.md
crates/app_analyzer/: Cargo.toml
crates/app_analyzer/src/: lib.rs  main.rs  traits.rs  types.rs
crates/app_analyzer/src/analyzers/: mod.rs
crates/app_analyzer/src/analyzers/android/: aab.rs  apk.rs  mod.rs
crates/app_analyzer/src/analyzers/ios/: ipa.rs  mod.rs
crates/app_analyzer/src/analyzers/macos/: dmg.rs  mod.rs
crates/app_builder/: Cargo.toml
crates/app_builder/src/: main.rs  traits.rs  types.rs
crates/app_packager/: Cargo.toml
crates/app_packager/src/: main.rs  traits.rs  types.rs
crates/app_packager/src/packagers/android/: aab.rs  apk.rs
crates/app_packager/src/packagers/ios/: ipa.rs
crates/app_packager/src/packagers/linux/: deb.rs
crates/app_packager/src/packagers/macos/: dmg.rs
crates/app_packager/src/packagers/windows/: exe.rs  msix.rs
crates/app_publisher/: Cargo.toml
crates/app_publisher/src/: lib.rs  main.rs  traits.rs  types.rs
crates/app_publisher/src/publishers/: mod.rs
crates/app_publisher/src/publishers/appstore/: mod.rs
crates/app_publisher/src/publishers/playstore/: mod.rs
crates/fastforge/: Cargo.toml
crates/fastforge/src/: main.rs
crates/fastforge/src/cli/: analyze.rs  build.rs  mod.rs  package.rs  publish.rs  upgrade.rs
docs/en/makers/: exe.md  pkg.md
docs/zh/makers/: exe.md  pkg.md
examples/: custom_inno_setup_path.md
examples/hello_world/windows/packaging/exe/: make_config.yaml
