[package]
name = "fastforge"
version = "0.7.0"
edition = "2024"
authors = ["LiJianying <lijy91@foxmail.com>"]
description = "The ultimate all-in-one app packaging and distribution tool"
license = "MIT"

[dependencies]
app_analyzer = { path = "../app_analyzer" }
app_builder = { path = "../app_builder" }
app_packager = { path = "../app_packager" }
app_publisher = { path = "../app_publisher" }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.28"
